--- a/School_API/appsettings.json
+++ b/School_API/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection":  "Server=.;Database=School;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
-  "AllowedHosts": "*"
+    "DefaultConnection": "Server=.;Database=School;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
