--- a/School_API/appsettings.json
+++ b/School_API/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection":  "Server=.;Database=School;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "software_API_School/1234567890.@",
+    "Issuer": "https://localhost:7013",
+    "Audience": "https://localhost:7013",
+    "Subject":  "baseWebApisubject"
+  }
 }
