--- a/School_API/appsettings.json
+++ b/School_API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=School;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "Key": "software_API_School/1234567890.@",
+    "Issuer": "https://localhost:7271",
+    "Audience": "https://localhost:7271",
+    "Subject": "baseWebApisubject"
   }
 }
